[gd_scene load_steps=3 format=3 uid="uid://enemy_scene"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_enemy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(30, 30)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_enemy")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.533333, 0, 1)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_1")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = false

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]